objects/PSAPSCTechnologies__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Psa__c</fullName>
        <label>Psa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psc__c</fullName>
        <label>Psc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PSAPSCTechnologies</label>
</CustomObject>